# deeper

./: .envrc  .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md  buildkite-test.md  compat.nix  deeper.nix  deny.toml  flake.nix  game-design.md  shell.nix
assets/blender/: asset_pipeline.py  beam.blend  bottle.blend  ceilings.blend  corners.blend  crt.blend  crt_stand.blend  door.blend  exterior.blend  foureyes.blend  halo.blend  isopod.blend  japanese_tile.osl  jp_roof.blend  potion.blend  roof.blend  round_column.blend  stairs.blend  vornak.blend  wall.blend
assets/gltf/: beam.glb  bottle.glb  crt.glb  crt_stand.glb  halo.glb  roof.glb  stairs.glb  vornak.glb
assets/rooms/: room1.txt  room2.txt
assets/shaders/: animation.wgsl  associa_circle.wgsl  bubbles_circle.wgsl  crt_material.wgsl  flesh_circle.wgsl  halo.wgsl  postprocessing.wgsl
nix/: nixpkgs.nix
nix/wasm-server-runner/: cargo-lock.patch  default.nix
src/: add_bloom.rs  assets.rs  camera.rs  character.rs  checksum.rs  console.rs  crt.rs  enemy.rs  explosion.rs  fps_controller.rs  importable_shaders.rs  interact.rs  inventory.rs  key_translator.rs  level.rs  magic.rs  main.rs  name_map.rs  netcode.rs  postprocessing.rs  projectile.rs  room_loader.rs  self_destruct.rs  shapes.rs  spline.rs  terminal_key.rs  trail.rs  ui.rs  voxel_editor.rs
src/circles/: associa.rs  bubbles.rs  flesh.rs  mod.rs
src/editor/: document.rs  editor.rs  filetype.rs  highlighting.rs  mod.rs  row.rs  terminal.rs
src/enemies/: halo.rs  mod.rs
src/level/: aabb.rs  brick.rs  doorway.rs  erior.rs  integer_matrix.rs  mod.rs  voxel.rs
src/magic/: mod.rs  span.rs  token.rs
src/outline/: mod.rs  prepare.rs  smooth_normal.rs  window_size.rs
src/outline/render/: outline.wgsl
