[package]
name = "deeper"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "*"
bevy_asset_loader = "*"
bevy_egui = "*"
bevy_rapier3d = { version = "*", features = ["serde-serialize", "enhanced-determinism"] }
bevy_sprite3d = "*"
bevy-inspector-egui = "*"
bevy-scene-hook = "*"
bitvec = "*"
wgpu = "0.14.*"
wgpu-types = "0.14.*"
unicode-segmentation = "*"
noto-sans-mono-bitmap = { version = "*", features = ["all"] }
fraction = "*"
petgraph = "*"
rand = "*"
anyhow = "*"
thiserror = "*"
num-traits = "*"
ab_glyph = "*"
noisy_bevy = "*"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bevy_dylib = "*"
bevy = { version = "0.9.1", features = ["dynamic"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
