[package]
name = "deeper"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.10.*"
bevy_asset_loader = "0.15.*"
bevy_egui = "0.20.*"
bevy_rapier3d = { version = "0.21.*", features = ["serde-serialize", "enhanced-determinism"] }
bevy-inspector-egui = "0.18.*"
bevy-scene-hook = "6.0.*"
rapier3d = "*"
bitvec = "*"
wgpu = "*"
wgpu-types = "*"
unicode-segmentation = "*"
noto-sans-mono-bitmap = { version = "*", features = ["all"] }
fraction = "*"
petgraph = "*"
rand = "*"
anyhow = "*"
thiserror = "*"
num-traits = "*"
ab_glyph = "*"
noisy_bevy = "*"
uuid = "*"

[target.'cfg(target_arch = "x86_64")'.dependencies]
bevy_dylib = "*"
bevy = { version = "0.10.*" } #, features = ["dynamic"] }
#bevy = { version = "0.10.*", features = ["dynamic", "trace_tracy"] }

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
